# IS_Shoes

./: .gitignore  Docker_infos.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9fde853a345c_create_tables.py  df77c0cdec34_add_service_type_and_desired_date_to_.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  orders.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  order.py  role.py  user.py
backend/app/schemas/: order.py  user.py
backend/scripts/: seed_db.py
frontend/: Dockerfile  README.md  package.json  vite.config.ts
frontend/src/: App.tsx  AppRouter.tsx  index.css
frontend/src/components/: AuthCard.tsx  DasboardLayout.tsx  EditOrderModal.tsx  Footer.tsx  Header.tsx  MobileNav.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx
frontend/src/pages/Dashboard/: CreateOrder.tsx  ManageOrders.tsx  MyOrders.tsx  Profile.tsx
frontend/src/services/: apiClient.ts  authService.ts  index.ts  orderService.ts
frontend/src/types/: enums.ts  order.ts  user.ts
